Fix swagger and endpoints
